--- a/app/src/main/res/drawable/background_killer.xml
+++ b/app/src/main/res/drawable/background_killer.xml
@@ -3,14 +3,10 @@
 
     <item>
         <shape>
-            <stroke android:color="@color/colorAccent"
-                android:width="2pt"/>
-            <solid android:color="@color/white"/>
-            <corners android:radius="3pt"/>
-            <padding android:top="3dp"
-                android:right="3dp"
-                android:left="3dp"
-                android:bottom="3dp"/>
+            <stroke android:width="2pt" android:color="@color/colorAccent" />
+            <solid android:color="@color/white" />
+            <corners android:radius="3pt" />
+            <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
         </shape>
     </item>
 </selector>
